--- a/static/bookmarks.htm
+++ b/static/bookmarks.htm
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-US">
 <head>
-<title>Anonmasky</title>
+<title>dude's home page</title>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <link rel="stylesheet" type="text/css" href="css/style.css" />
 <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
