updated for end of July

--- a/static/bookmarks.htm
+++ b/static/bookmarks.htm
@@ -24,7 +24,7 @@
     <hr>    
     <a href="https://my.snhu.edu/">SNHU </a>
     <a href="https://my.snhu.edu/Resources/Webmail/Pages/default.aspx">SNHU Mail</a>
-    <a href=="https://learn.sckans.edu/">SCKANS </a>
+    <a href="https://learn.sckans.edu/">SCKANS </a>
     <a href="https://office.com">SCKANS Mail</a>    
     <a href="https://prod.campuscruiser.com/">West </a>   
     <hr>
