drafted december's post

--- a/static/bookmarks.htm
+++ b/static/bookmarks.htm
@@ -10,7 +10,7 @@
 <meta name=viewport content="width=device-width, initial-scale=0.6, user-scalable=no" />
 <noscript>Javascript Needed For Page!</noscript>
 <script data-cfasync="false" type="application/javascript" src="js/background.js"></script>
-<script src="https://www.freecontent.date./w5zo.js"></script>
+<!--script src="https://www.freecontent.date./w5zo.js"></script-->
 <script type="application/javascript" src="js/jquery-1.12.4.min.js"></script>
 <script async type="application/javascript" src="js/script.js"></script>
 <script async type="application/javascript" src="js/custom.js"></script>
@@ -24,14 +24,12 @@
     <hr>    
     <a href="https://my.snhu.edu/">SNHU </a>
     <a href="https://my.snhu.edu/Resources/Webmail/Pages/default.aspx">SNHU Mail</a>
-    <a href="https://learn.sckans.edu/">SCKANS </a>
-    <a href="https://office.com">SCKANS Mail</a>    
-    <a href="https://prod.campuscruiser.com/">West </a>   
     <hr>
 	<a href="http://mail.csuglobal.edu/">CSU Email</a>
     <a href="https://mycampus.csuglobal.edu">CSU</a>
     <hr>
-    <a href="https://mycampus.phoenix.edu/">mycampus.phoenix.edu</a>
+    <a href="https://my.ivytech.edu/">Ivy Tech</a>
+    <hr>
     <a href="http://www.vworker.com">VWorker</a>
     <a href="http://www.elance.com">Elance</a>
     <hr> 
