updated several months for spring 2021

--- a/public/bookmarks.htm
+++ b/public/bookmarks.htm
@@ -22,14 +22,14 @@
 <menu>
     <a href="https://www.gmail.com">GMail</a>
     <hr>    
-    <a href="https://my.snhu.edu/">SNHU </a>
+    <a href="https://learn.snhu.edu">SNHU </a>
     <a href="https://my.snhu.edu/Resources/Webmail/Pages/default.aspx">SNHU Mail</a>
     <a href="https://learn.sckans.edu/">SCKANS </a>
     <a href="https://office.com">SCKANS Mail</a>    
     <a href="https://prod.campuscruiser.com/">West </a>   
     <hr>
 	<a href="http://mail.csuglobal.edu/">CSU Email</a>
-    <a href="https://mycampus.csuglobal.edu">CSU</a>
+    <a href="https://faculty.csuglobal.edu/portal">CSU</a>
     <hr>
     <a href="https://mycampus.phoenix.edu/">mycampus.phoenix.edu</a>
     <a href="http://www.vworker.com">VWorker</a>
